# napari-workflows

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: Testing Save and Read Funcs.ipynb  Testing undo with workflows in stacks and debugging too many positional arguments.ipynb  Testing undo with workflows in stacks.ipynb  Using workflows in functions.ipynb  demo.ipynb  deskewing_workflow.ipynb  finding better ways to compare workflows.ipynb  inputs_outputs.ipynb  load.ipynb  save_and_load.ipynb  simple wf 1.yaml  simple wf 2.yaml  simple workflow.yaml  test.yaml  testing errors with loaded workflows alone.ipynb  tiling-decorator.ipynb
src/napari_workflows/: __init__.py  _io_yaml_v1.py  _undo_redo_functionality.py  _workflow.py  _workflowmanager_commands.py
src/napari_workflows/_tests/: test_function.py
tests/: test_workflows.py
