[metadata]
name = napari-workflows
version = 0.0.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-workflows
license = BSD-3-Clause
description = Data structures for managing image processing workflows in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-workflows/issues
    Documentation = https://github.com/haesleinhuepf/napari-workflows#README.md
    Source Code = https://github.com/haesleinhuepf/napari-workflows
    User Support = https://github.com/haesleinhuepf/napari-workflows/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-workflows = napari_workflows
